Deploytool renamed to vanilla deploy

--- a/install
+++ b/install
@@ -1,5 +1,5 @@
 #!/bin/bash
-# Author : Tech-Alchemist.Github.Io
+# Author : Abhishek @ EchtOps
 # DeployTool Install File ##
 
 ## Color Definitions ##
@@ -9,7 +9,7 @@ colmag='\e[35m'		# Magenta
 coldef='\e[39m'		# Default
 
 ## Validations ##
-ops_dir="/opt/opsworks/deploy"
+ops_dir="/opt/echtops/vanilla-deploy"
 
 [[ "$(pwd)" != "$ops_dir" ]] && { echo -e "$colred\r[-] Please cd to $ops_dir & then Run$coldef $0" ; exit 1 ; }
 [[ "$(id -u)"  != "0" ]] && { echo -e "$colred\r[-] Please Run From Root Access.$coldef" ; exit 1 ; }
@@ -62,8 +62,8 @@ echo -e "$colgrn\r[+] And Paste It To SSH Keys of Deploy User $coldef"
 rm -f /etc/init.d/deploy.* /etc/*.deploy.conf /etc/logrotate.d/*.deploy "/usr/sbin/deploy.tool" "/usr/sbin/deploy.bash"
 sed -i "s|examplewebuser|$webuser|g" $ops_dir/bins/deploy.bash
 sed -i "s|'examplesrc'|'$src'|g" $ops_dir/bins/deploy.bash
-ln -s "$ops_dir/confs/main.conf" "/etc/web.deploy.conf"
-ln -s "$ops_dir/confs/logrotate.conf" "/etc/logrotate.d/web.deploy"
+ln -s "$ops_dir/confs/main.conf" "/etc/vanilla-deploy.conf"
+ln -s "$ops_dir/confs/logrotate.conf" "/etc/logrotate.d/vanilla-deploy"
 ln -s "$ops_dir/bins/deploy.bash" "/usr/sbin/deploy.bash"
 
 sed -i '/deploy/d' /etc/rc.local ; sed -i  '/deploy.bash/d' /etc/rc.local
@@ -71,7 +71,7 @@ echo "sleep 30 && ${ops_dir}/bins/deploy.bash start & " >> /etc/rc.local
 sed -i '/exit 0/d' /etc/rc.local && echo 'exit 0' >> /etc/rc.local
 echo "" >> /etc/rc.local
 
-mkdir -p /var/log/deploy
+mkdir -p /var/log/echtops
 
 git remote remove origin
 git add . 
